# dg-yaru

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/: CONTRIBUTING.md
cinnamon-shell/src/: meson.build  post_install.py
cinnamon-shell/src/default/: _colors.scss  _common.scss  _drawing.scss  _palette.scss  _tweaks.scss
common/: accent-colors.scss.in  colorize-dummy-svg.py  yaru-colors-defs.scss
cursors/: meson.build
cursors/Yaru/: cursor.theme
cursors/src/cursors/: README.md
gnome-shell/: gnome-shell-sync.sh
gnome-shell/src/: diff.sh  meson.build  script.sh
gnome-shell/src/gnome-42/: README.md  gnome-shell.scss.in  install-shell.sh  meson.build  pad-osd.css
gnome-shell/src/gnome-42/colorable-assets/: README.md
gnome-shell/src/gnome-42/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-42/gnome-shell-sass/: COPYING  NEWS  README.md  _blur-my-shell.scss  _colors.scss  _common.scss  _dock.scss  _drawing.scss  _high-contrast-colors.scss  _palette.scss  gnome-shell-sass.doap
gnome-shell/src/gnome-42/gnome-shell-sass/widgets/: _a11y.scss  _app-grid.scss  _base.scss  _calendar.scss  _check-box.scss  _corner-ripple.scss  _dash.scss  _dialogs.scss  _entries.scss  _hotplug.scss  _ibus-popup.scss  _keyboard.scss  _login-dialog.scss  _looking-glass.scss  _message-list.scss  _misc.scss  _network-dialog.scss  _notifications.scss  _osd.scss  _overview.scss  _panel.scss  _popovers.scss  _screen-shield.scss  _screenshot.scss  _scrollbars.scss  _search-entry.scss  _search-results.scss  _slider.scss  _switcher-popup.scss  _switches.scss  _window-picker.scss  _workspace-switcher.scss  _workspace-thumbnails.scss
gnome-shell/src/gnome-42/home/dg/qualia-gtk-theme/src/dg-yaru/gnome-shell/src/gnome-42/gnome-shell-sass/: _common.scss  _dock.scss
gnome-shell/src/gnome-42/home/dg/qualia-gtk-theme/src/dg-yaru/gnome-shell/src/gnome-42/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _check-box.scss  _dash.scss  _dialogs.scss  _network-dialog.scss  _panel.scss  _popovers.scss  _switches.scss  _window-picker.scss  _workspace-thumbnails.scss
gnome-shell/src/gnome-43/: README.md  gnome-shell.scss.in  install-shell.sh  meson.build
gnome-shell/src/gnome-43/colorable-assets/: README.md
gnome-shell/src/gnome-43/data/: gnome-shell-icons.gresource.xml
gnome-shell/src/gnome-43/gnome-shell-sass/: COPYING  README.md  _blur-my-shell.scss  _colors.scss  _common.scss  _dock.scss  _drawing.scss  _high-contrast-colors.scss  _palette.scss  gnome-shell-sass.doap
gnome-shell/src/gnome-43/gnome-shell-sass/widgets/: _a11y.scss  _app-grid.scss  _base.scss  _calendar.scss  _check-box.scss  _corner-ripple.scss  _dash.scss  _dialogs.scss  _entries.scss  _hotplug.scss  _keyboard.scss  _login-dialog.scss  _looking-glass.scss  _message-list.scss  _osd.scss  _overview.scss  _panel.scss  _popovers.scss  _quick-settings.scss  _screen-shield.scss  _screenshot.scss  _scrollbars.scss  _search-entry.scss  _search-results.scss  _slider.scss  _switcher-popup.scss  _switches.scss  _window-picker.scss  _workspace-switcher.scss  _workspace-thumbnails.scss
gnome-shell/src/gnome-44/: gnome-shell.scss.in  meson.build
gnome-shell/src/gnome-44/gnome-shell-sass/: _colors.scss  _drawing.scss  _widgets.scss
gnome-shell/src/gnome-44/gnome-shell-sass/widgets/: _app-grid.scss  _buttons.scss  _dash.scss  _login-lock.scss  _looking-glass.scss  _misc.scss  _notifications.scss  _overview.scss  _panel.scss  _quick-settings.scss  _search-entry.scss  _search-results.scss  _window-picker.scss
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _dock.scss  _drawing.scss
gnome-shell/src/gnome-shell-sass/widgets/: _app-grid.scss  _corner-ripple.scss  _dash.scss  _dialogs.scss  _entries.scss  _login-dialog.scss  _looking-glass.scss  _message-list.scss  _misc.scss  _notifications.scss  _overview.scss  _popovers.scss  _screenshot.scss  _search-entry.scss  _search-results.scss  _slider.scss  _switcher-popup.scss  _window-picker.scss  _workspace-thumbnails.scss
gnome-shell/upstream/gnome-42/theme/gnome-shell-sass/: _common.scss
gnome-shell/upstream/gnome-42/theme/gnome-shell-sass/widgets/: _screenshot.scss
gnome-shell/upstream/gnome-43/theme/gnome-shell-sass/: _common.scss  _drawing.scss
gnome-shell/upstream/gnome-43/theme/gnome-shell-sass/widgets/: _screenshot.scss
icons/: meson.build
icons/Yaru/24x24@2x/places/: org.xfce.panel.showdesktop.launcher
icons/Yaru/32x32/places/: org.xfce.panel.clock.launcher
icons/src/: README.md  generate-index-theme.py
icons/src/symlinks/: create-symlinks.sh  generate-symlinks.sh
icons/src/symlinks/fullcolor/: apps.list  categories.list  places.list
icons/src/symlinks/symbolic/: places.list
metacity/src/: meson.build  post_install.py
metacity/src/dark/: metacity-theme-1.xml.in
metacity/src/dark-symbolic/: metacity-theme-1.xml.in
metacity/src/default/: metacity-theme-1.xml.in
metacity/src/default-macos/: metacity-theme-1.xml.in
metacity/src/default-symbolic/: metacity-theme-1.xml.in
ubuntu-unity/src/: meson.build  symlink.sh
xfwm4/src/: meson.build
xfwm4/src/dark-macos/xfwm4/: assets.txt  themerc.in
xfwm4/src/dark-symbolic/xfwm4/: render-xfwm4-assets.sh
xfwm4/src/default-macos/xfwm4/: assets.txt  render-xfwm4-assets.sh
xfwm4/src/default-symbolic/xfwm4/: themerc.in
xfwm4/src/default/xfwm4/: themerc.in
