option('icons', type: 'boolean', value: true, description:'build icons component')
option('cursors', type: 'boolean', value: true, description:'build cursors component')
option('gnome-shell', type: 'boolean', value: true, description:'build gnome-shell component')
option('gnome-shell-version', type : 'combo', choices : ['42', '43'], value : '43', description:'version of gnome-shell that is being used')
option('gnome-shell-default-variant', type: 'string', value: 'light', description:'default variant to be used gnome-shell')
option('gnome-shell-gresource', type: 'boolean', value: false, description: 'build gnome-shell component in gresources')
option('gnome-shell-user-themes-support', type: 'feature', value: 'enabled', description: 'install gnome-shell uncompressed CSS themes as User Themes expects')
option('gdm-default-variant', type: 'string', value: 'dark', description:'default variant to be used in GDM')
option('gtksourceview', type: 'boolean', value: true, description:'build gtksourceview component')
option('sounds', type: 'boolean', value: true, description:'build sounds component')

option('default', type: 'boolean', value: true, description:'build Yaru default flavour')
option('dark', type: 'boolean', value: true, description:'build Yaru dark flavour')

# We use the dark flat above to do the dark variants of them
option('accent-colors',
    type: 'array',
    choices: [
        'bark',
        'sage',
        'olive',
        'viridian',
        'prussiangreen',
        'blue',
        'purple',
        'magenta',
        'red',
    ],
)
